# ComfyUI-Sophon

./: .gitignore  README.md  __init__.py  pyproject.toml
.beads/: .beads-credential-key  metadata.json
comfyui_sophon/: nodes.py
web/: sophon-preview.js
